# bug_reproduce

./: Cargo.toml
anotherbin/: Cargo.toml
anotherbin/src/: main.rs
src/: main.rs
testlib/: Cargo.toml
testlib/src/: lib.rs
testlib2/: Cargo.toml
testlib2/src/: lib.rs
