[package]
name = "bug_reproduce"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "./testlib", "anotherbin", "testlib2"]

[workspace.dependencies]
testlib = { path = "./testlib", version = "0.1" }
testlib2 = { path = "./testlib2", version = "0.1" }

[dependencies]
testlib.workspace = true
# as soon as I induced the testlib2, the tokio is enabled
testlib2.workspace = true
